# git-wheel

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
scripts/: chomp.sh  update-version.pl
